- fix arcanis's to arcanis'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>arcanis's homepage</title>
+    <title>arcanis' homepage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>arcanis's homepage</h1>
+        <h1>arcanis' homepage</h1>
 
         <p class="view"><a href="pages/about.html">About me</a></p>
 
