Small edit of about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
         <p class="view"><a href="https://github.com/arcan1s">GitHub Profile</a><br>
         <a href="https://www.archlinux.org/trustedusers/#arcanis">TU Profile on <code>archlinux.org</code></a><br>
         <a href="http://istina.msu.ru/profile/arcanis">Some of my publications</a></p>
-        
+
         <h2>Contacts</h2>
         <p>Alias: arcanis/arcan1s<br>
         IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a> <br>
@@ -35,7 +35,7 @@
 
 <p align="justify">At leisure I write small applications on C, C++ and Python (and some application scripts on Shell), link to the GitHub profile may be found on the left. In order not to seem like a bearded nerd sometimes I listen music and read <a href="http://en.wikipedia.org/wiki/Robert_Jordan">Robert Jordan's</a> or <a href="http://en.wikipedia.org/wiki/George_R.R._Martin">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="smb://89.249.170.38/Music/">my home computer</a>.</p>
 
-<p align="justify">Also I'm an <a href="https://www.archlinux.org/">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in September 2013 I became an Archlinux Trusted User:
+<p align="justify">Also I'm an <a href="https://www.archlinux.org/">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:
 <blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
 The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.
 </blockquote>
@@ -53,6 +53,7 @@ And the correct answer is '<code>5</code>' (or '<code>6</code>', as you wish).</
 
       </section>
       <footer>
+        <p class="view"><a href="../index.html">Back to Homepage</a>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
