edited paths to absolute

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>arcanis' homepage</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,15 +17,15 @@
       <header>
         <h1>arcanis' homepage</h1>
 
-        <p class="view"><a href="blog/main.html">My blog</a><br>
-                        <a href="pages/projects.html">My projects</a></p>
-        <p class="view"><a href="pages/about.html">About me</a></p>
+        <p class="view"><a href="/blog/main.html">My blog</a><br>
+                        <a href="/pages/projects.html">My projects</a></p>
+        <p class="view"><a href="/pages/about.html">About me</a></p>
 
       </header>
       <section>
 
 <h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
-<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="pages/about.html">the link</a>. I'm sorry I don't know html/php/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming and may be package maintaining and living in Archlinux system. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>. Unfortunately, sometimes I too lazy to write in English, therefore some of my papers will be in Russian.</p>
+<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/pages/about.html">the link</a>. I'm sorry I don't know html/php/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming and may be package maintaining and living in Archlinux system. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>. Unfortunately, sometimes I too lazy to write in English, therefore some of my papers will be in Russian.</p>
 
 <h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact me</h3>
 <p align="justify">If you have a question or something else you may contact me via <a href="mailto:darkarcanis@mail.ru">e-mail</a>. If you want to suggest a pull request or to create a bug report for these pages (or may be for some other projects) feel free to visit <a href="https://github.com/arcan1s">my Github profile</a> and do it.</p>
@@ -34,7 +34,7 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="/javascripts/scale.fix.js"></script>
 
   </body>
 </html>
