Small edit of about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,8 @@
 
         <p class="view"><a href="https://github.com/arcan1s">GitHub Profile</a><br>
         <a href="https://www.archlinux.org/trustedusers/#arcanis">TU Profile on <code>archlinux.org</code></a><br>
-        <a href="http://istina.msu.ru/profile/arcanis">Some of my publications</a></p>
+        <a href="http://istina.msu.ru/profile/arcanis">Some of my publications</a><br>
+        PGP singature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
 
         <h2>Contacts</h2>
         <p>Alias: arcanis/arcan1s<br>
@@ -40,10 +41,9 @@
 The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.
 </blockquote>
 <p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">ArchWiki</a></p>
-Link to the TU profile may be fount on the left too.</p>
+Link to the TU profile may be found on the left too.</p>
 
-<p align="justify">All contact information can be found on the left. Feel free to contact me with any questions. <br>
-Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:
+<p align="justify">All contact information can be found on the left. Feel free to contact me with any questions. Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:
 <pre>int i = 1;
 i = ++i + ++i;
 return i;</pre>
