+ added git-etc page + added icon * small edit

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="shortcut icon" href="/resources/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,7 +32,7 @@
 <h3><a name="gitetc" class="anchor" href="#gitetc"><span class="octicon octicon-link"></span></a>git-etc</h3>
 <p align="justify"><code>git-etc</code> is a simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval. It is written on <code>Bash</code>. It is also has a simple Graphical user interface written on <code>Python2</code> (<code>pyqt4</code>) for work with the created repository.</p>
 <ul>
-  <li><a href="../projects/git-etc.html">Homepage</a></li>
+  <li><a href="/projects/git-etc.html">Homepage</a></li>
   <li><a href="https://github.com/arcan1s/git-etc">GitHub repo</a></li>
   <li>Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a></li>
 </ul>
@@ -39,7 +40,7 @@
 <h3><a name="queued" class="anchor" href="#queued"><span class="octicon octicon-link"></span></a>queued</h3>
 <p align="justify"><code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.</p>
 <ul>
-  <li><a href="../projects/queued.html">Homepage</a></li>
+  <li><a href="/projects/queued.html">Homepage</a></li>
   <li><a href="https://github.com/arcan1s/queued">GitHub repo</a></li>
 </ul>
 
@@ -54,7 +55,7 @@
 <h3><a name="oblikuestrategies" class="anchor" href="#oblikuestrategies"><span class="octicon octicon-link"></span></a>oblikue-strategies</h3>
 <p align="justify"><code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">GNOME applet</a> fork with some of special features.</p>
 <ul>
-  <li><a href="../projects/oblikuestrategies.html">Homepage</a></li>
+  <li><a href="/projects/oblikuestrategies.html">Homepage</a></li>
   <li><a href="https://github.com/arcan1s/oblikuestrategies">GitHub repo</a></li>
   <li>Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a></li>
   <li>Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR package</a></li>
@@ -69,7 +70,7 @@
 <h3><a name="pytextmonitor" class="anchor" href="#pytextmonitor"><span class="octicon octicon-link"></span></a>py-text-monitor</h3>
 <p align="justify"><code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).</p>
 <ul>
-  <li><a href="../projects/pytextmonitor.html">Homepage</a></li>
+  <li><a href="/projects/pytextmonitor.html">Homepage</a></li>
   <li><a href="https://github.com/arcan1s/pytextmonitor">GitHub repo</a></li>
   <li>Plasmoid page on <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a></li>
   <li>DataEngine page on <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a></li>
@@ -87,7 +88,7 @@
 
 <p align="justify">They are represented by a single repository. It contains some programs for analysis of molecular dynamic trajectories using statistical mechanics and some of maths methods (e.g. graph theory). Usualy backend programs are written on <code>C</code>, but sometimes on <code>Python2</code>. Some of these have a Graphical user interface written on <code>CPP</code>.</p>
 <ul>
-  <li><a href="../projects/moldyn.html">Homepage</a></li>
+  <li><a href="/projects/moldyn.html">Homepage</a></li>
   <li><a href="https://github.com/arcan1s/moldyn">GitHub repo</a></li>
 </ul>
 
@@ -109,13 +110,13 @@
 <h3><a name="julius-actions" class="anchor" href="#julius-actions"><span class="octicon octicon-link"></span></a>julius-actions</h3>
 <p align="justify"><code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.</p>
 <ul>
-  <li><a href="../projects/julius-actions.html">Homepage</a></li>
+  <li><a href="/projects/julius-actions.html">Homepage</a></li>
   <li><a href="https://github.com/arcan1s/julius-actions">GitHub repo</a></li>
 </ul>
 
       </section>
       <footer>
-        <p class="view"><a href="/index.html">Back to Homepage</a>
+        <p class="view"><a href="/index.html">Back to Homepage</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
