--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="shortcut icon" href="/resources/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -51,7 +52,7 @@ And the correct answer is '<code>5</code>' (or '<code>6</code>', as you wish).</
 
       </section>
       <footer>
-        <p class="view"><a href="/index.html">Back to Homepage</a>
+        <p class="view"><a href="/index.html">Back to Homepage</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
