added contents to git-etc page

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>git-etc</title>
 
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <link rel="shortcut icon" href="/resources/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -17,7 +17,14 @@
     <div class="wrapper">
       <header>
         <h1>git-etc</h1>
-        <p align="justify">Simple daemon for monitoring changes in files</p>
+        <p class="view">Simple daemon for monitoring changes in files</p>
+        <p class="view"><a href="#information">General information</a><br>
+                        <a href="#installation">Installation guide</a><br>
+                        <a href="#howto">How to use</a><br>
+                        <a href="#configuration">Configuration</a><br>
+                        <a href="#gui">GUI</a><br>
+                        <a href="#screenshots">Screenshots</a><br>
+                        <a href="#links">Links</a></p>
       </header>
       <section>
 
