--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <h1>arcanis' homepage</h1>
 
-        <p class="view"><a href="/blog/main.html">My blog</a><br>
+        <p class="view"><a href="/blog/index.html">My blog</a><br>
                         <a href="/pages/projects.html">My projects</a></p>
         <p class="view"><a href="/pages/about.html">About me</a></p>
 
