--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -133,15 +133,15 @@ See "man 1 ctrlconf" for more details</code></pre>
 <h3><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
 <p align="justify">(Screenshots in Russian, but GUI has English translation.)</p>
 <p align="justify">Main window:<br>
-<a href="http://s42.radikal.ru/i095/1302/d1/c84813c8e569.png"><img src="http://s42.radikal.ru/i095/1302/d1/c84813c8e569t.jpg"></a><br>
+<a href="/resources/screenshots/git-etc_mainwindow.png"><img src="/resources/preview/git-etc_mainwindow_prev.jpg"></a><br>
 About window:<br>
-<a href="http://i066.radikal.ru/1302/30/a384c0fe84f8.png"><img src="http://i066.radikal.ru/1302/30/a384c0fe84f8t.jpg"></a><br>
+<a href="/resources/screenshots/git-etc_aboutwindow.png"><img src="/resources/preview/git-etc_aboutwindow_prev.jpg"></a><br>
 Commit changes window:<br>
-<a href="http://s005.radikal.ru/i210/1302/7d/0b0a7009ef14.png"><img src="http://s005.radikal.ru/i210/1302/7d/0b0a7009ef14t.jpg"></a><br>
+<a href="/resources/screenshots/git-etc_commitwindow.png"><img src="/resources/preview/git-etc_commitwindow_prev.jpg"></a><br>
 Merging window:<br>
-<a href="http://s59.radikal.ru/i163/1302/22/b4814c47aa29.png"><img src="http://s59.radikal.ru/i163/1302/22/b4814c47aa29t.jpg"></a><br>
+<a href="/resources/screenshots/git-etc_mergingwindow_prev.png"><img src="/resources/preview/git-etc_mergingwindow_prev.jpg"></a><br>
 Roll back window:<br>
-<a href="http://s017.radikal.ru/i408/1302/88/fb42c8bd8659.png"><img src="http://s017.radikal.ru/i408/1302/88/fb42c8bd8659t.jpg"></a></p>
+<a href="/resources/screenshots/git-etc_rollbackwindow.png"><img src="/resources/preview/git-etc_rollbackwindow_prev.jpg"></a></p>
 
 <h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
 <ul>
