--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -42,7 +42,7 @@
 
 <h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li><p align="justify">Download an <a href="https://github.com/arcan1s/oblikue-strategies/releases">archive</a> with latest version of source files.</p></li>
+  <li><p align="justify">Download an <a href="https://github.com/arcan1s/oblikuestrategies/releases">archive</a> with latest version of source files.</p></li>
   <li><p align="justify">Extract it and install the application. For global isntallation type:</p>
 <pre><code>cd /where/your/applet/is/installed
 mkdir build && cd build
@@ -71,9 +71,9 @@ make install</code></pre></li>
 
 <h2><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 <p align="justify">Widget:<br>
-<a href="http://s014.radikal.ru/i327/1309/cd/cac386d1ebcd.png"><img src="http://s014.radikal.ru/i327/1309/cd/cac386d1ebcdt.jpg"></a><br>
+<a href="/resources/screenshots/oblikuestrategies_widget.png"><img src="/resources/preview/oblikuestrategies_widget_prev.jpg"></a><br>
 Configuration window:<br>
-<a href="http://s019.radikal.ru/i641/1309/15/c37737bbd3da.png"><img src="http://s019.radikal.ru/i641/1309/15/c37737bbd3dat.jpg"></a></p>
+<a href="/resources/screenshots/oblikuestrategies_config.png"><img src="/resources/preview/oblikuestrategies_config_prev.jpg"></a></p>
 
 <h2><a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
 <ul>
