--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,6 +12,9 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script type="text/javascript">var switchTo5x=false;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "70dd9cde-7276-47af-8de7-9c43883daf2b", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
   </head>
   <body>
     <div class="wrapper">
@@ -116,6 +119,11 @@
       </section>
       <footer>
         <p class="view"><a href="/index.html">Back to Homepage</a></p>
+        <span class='st_vkontakte'></span>
+        <span class='st_facebook'></span>
+        <span class='st_twitter'></span>
+        <span class='st_googleplus'></span>
+        <span class='st_livejournal'></span>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
