--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -153,7 +153,37 @@ Roll back window:<br>
   <li>Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a></li>
 </ul>
 
+<!-- comment block http://ivanzuzak.info/ -->
+<div id="comments">
+  <h2>Comments</h2>
+  <div id="header">
+    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/1"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+  </div>
+</div>
+<script type="text/javascript">
+  function loadComments(data) {
+    for (var i=0; i<data.length; i++) {
+      var cuser = data[i].user.login;
+      var cuserlink = "https://github.com/" + data[i].user.login;
+      var clink = "https://github.com/arcan1s/arcan1s.github.io/issues/1#issuecomment-" + data[i].url.substring(data[i].url.lastIndexOf("/")+1);
+      var cbody = data[i].body_html;
+      var cavatarlink = data[i].user.avatar_url;
+      var cdate = Date.parse(data[i].created_at).toString("yyyy-MM-dd HH:mm:ss");
+
+      $("#comments").append("<div class='comment'><div class='commentheader'><div class='commentgravatar'>" + '<img src="' + cavatarlink + '" alt="" width="20" height="20">' + "</div><a class='commentuser' href=\""+ cuserlink + "\">" + cuser + "</a><a class='commentdate' href=\"" + clink + "\">" + cdate + "</a></div><div class='commentbody'>" + cbody + "</div></div>");
+    }
+  }
+  $.ajax("https://api.github.com/repos/arcan1s/arcan1s.github.io/issues/1/comments?per_page=100", {
+    headers: {Accept: "application/vnd.github.full+json"},
+    dataType: "json",
+    success: function(msg){
+      loadComments(msg);
+   }
+  });
+</script>
+<!-- end of comment block -->
       </section>
+
       <footer>
         <p class="view"><a href="javascript:history.back()">Back</a><br>
                         <a href="/">Back to Homepage</a></p>
