added authors page

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>git-etc</title>
+    <meta name="author" content="Evgeniy Alekseev" />
+    <meta name="description" content="arcanis' homepage" />
+    <link rel="license" type="text/html" href="/LICENSE" />
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
@@ -14,7 +17,7 @@
     <![endif]-->
     <!-- comment block -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <!-- share it -->
+    <!-- sharethis -->
     <script type="text/javascript">var switchTo5x=false;</script>
     <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
     <script type="text/javascript">stLight.options({publisher: "70dd9cde-7276-47af-8de7-9c43883daf2b", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
@@ -156,7 +159,7 @@ Roll back window:<br>
   <li>Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a></li>
 </ul>
 
-<!-- comment block http://ivanzuzak.info/ -->
+<!-- comment block -->
 <script type="text/javascript" src="http://datejs.googlecode.com/svn/trunk/build/date-en-US.js"></script>
 <script type="text/javascript">
   $("#post p").each( function(index) {
@@ -195,8 +198,8 @@ Roll back window:<br>
   });
 </script>
 <!-- end of comment block -->
-      </section>
 
+      </section>
       <footer>
         <p class="view"><a href="javascript:history.back()">Back</a><br>
                         <a href="/">Back to Homepage</a></p>
@@ -205,7 +208,7 @@ Roll back window:<br>
         <span class='st_twitter'></span>
         <span class='st_googleplus'></span>
         <span class='st_livejournal'></span>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
