--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>About me</title>
+    <meta name="author" content="Evgeniy Alekseev" />
+    <meta name="description" content="arcanis' homepage" />
+    <link rel="license" type="text/html" href="/LICENSE" />
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
@@ -12,6 +15,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- sharethis -->
     <script type="text/javascript">var switchTo5x=false;</script>
     <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
     <script type="text/javascript">stLight.options({publisher: "70dd9cde-7276-47af-8de7-9c43883daf2b", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
@@ -59,7 +63,7 @@ return i;</code></pre>
         <span class='st_twitter'></span>
         <span class='st_googleplus'></span>
         <span class='st_livejournal'></span>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
