--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -173,7 +173,7 @@ Roll back window:<br>
 <div id="comments">
   <h2>Comments</h2>
   <div id="header">
-    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/1"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/1" target="_blank"> this post's issue page on GitHub</a> (you'll need a GitHub account).
   </div>
 </div>
 <script type="text/javascript">
