--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -263,7 +263,7 @@ Configuration window::<br>
 <div id="comments">
   <h2>Comments</h2>
   <div id="header">
-    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/3"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/3" target="_blank"> this post's issue page on GitHub</a> (you'll need a GitHub account).
   </div>
 </div>
 <script type="text/javascript">
