--- a/projects/queued.html
+++ b/projects/queued.html
@@ -160,7 +160,7 @@ Parameters:
 <div id="comments">
   <h2>Comments</h2>
   <div id="header">
-    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/4"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+    Want to leave a comment? Visit <a href="https://github.com/arcan1s/arcan1s.github.io/issues/4" target="_blank"> this post's issue page on GitHub</a> (you'll need a GitHub account).
   </div>
 </div>
 <script type="text/javascript">
