edited fonts + added templates

--- a/pages/authors.html
+++ b/pages/authors.html
@@ -35,6 +35,8 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
 
 <p align="justify">Sharethis have own custom <a href="http://www.sharethis.com/legal/publisher-terms-of-use">license</a> too.</p>
 
+<p align="justify"><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> is licensed under <a href="http://scripts.sil.org/OFL">The SIL Open Font</a> License.</p>
+
 <p align="center">&copy; Evgeniy Alekseev, 2014</p>
 
       </section>
