--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -292,12 +292,12 @@ Configuration window::<br>
       <footer>
         <p class="view"><a href="javascript:history.back()">Back</a><br>
                         <a href="/">Back to Homepage</a></p>
-        <span class='st_vkontakte'></span>
-        <span class='st_facebook'></span>
-        <span class='st_twitter'></span>
-        <span class='st_googleplus'></span>
-        <span class='st_livejournal'></span>
-        <p><small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
+        <p><span class='st_vkontakte'></span>
+           <span class='st_facebook'></span>
+           <span class='st_twitter'></span>
+           <span class='st_googleplus'></span>
+           <span class='st_livejournal'></span><br>
+           <small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
