removed 'pages' directory

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
+        <p><small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
