--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -208,7 +208,7 @@ Roll back window:<br>
            <span class='st_twitter'></span>
            <span class='st_googleplus'></span>
            <span class='st_livejournal'></span><br>
-           <small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
+           <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
