--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="arcanis' homepage" />
     <link rel="license" type="text/html" href="/LICENSE" />
 
-    <link rel="stylesheet" href="./stylesheets/styles.css">
-    <link rel="stylesheet" href="./stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
     <link rel="shortcut icon" href="/resources/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -26,17 +26,17 @@
         <h1>arcanis' homepage</h1>
 
         <p class="view"><a href="/blog/">My blog</a><br>
-                        <a href="/pages/projects">My projects</a></p>
-        <p class="view"><a href="/pages/about">About me</a></p>
+                        <a href="/projects/">My projects</a></p>
+        <p class="view"><a href="/about">About me</a></p>
 
       </header>
       <section>
 
 <h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
-<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/pages/about">the link</a>. I'm sorry I don't know html/php/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>. Unfortunately, sometimes I'm too lazy to write in English, therefore some of my papers will be in Russian.</p>
+<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/about">the link</a>. I'm sorry I don't know html/php/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>. Unfortunately, sometimes I'm too lazy to write in English, therefore some of my papers will be in Russian.</p>
 
 <h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact me</h3>
-<p align="justify">If you have a question or something else you may <a href="/pages/about">contact me</a>. If you want to suggest a pull request or to create a bug report for these pages (or may be for some other projects) feel free to visit <a href="https://github.com/arcan1s">my Github profile</a> and do it.</p>
+<p align="justify">If you have a question or something else you may <a href="/about">contact me</a>. If you want to suggest a pull request or to create a bug report for these pages (or may be for some other projects) feel free to visit <a href="https://github.com/arcan1s">my Github profile</a> and do it.</p>
 
 <h3><a name="search" class="anchor" href="#search"><span class="octicon octicon-link"></span></a>Site search</h3>
 <script>
@@ -60,7 +60,7 @@
            <span class='st_twitter'></span>
            <span class='st_googleplus'></span>
            <span class='st_livejournal'></span><br>
-           <small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
+           <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
