--- a/projects/index.html
+++ b/projects/index.html
@@ -128,7 +128,7 @@
            <span class='st_twitter'></span>
            <span class='st_googleplus'></span>
            <span class='st_livejournal'></span><br>
-           <small>Hosted on GitHub Pages. <a href="pages/authors">Authors</a></small></p>
+           <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/scale.fix.js"></script>
