yet another edit icon

--- a/authors.html
+++ b/authors.html
@@ -39,6 +39,8 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
 
 <p align="justify"><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> is licensed under <a href="http://scripts.sil.org/OFL">The SIL Open Font</a> License.</p>
 
+<p align="justify">Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
+
 <p align="center">&copy; Evgeniy Alekseev, 2014</p>
 
       </section>
